graphics/style/base.css
body {
    margin: 0;
    opacity: 0;
    background-color: rgb(0, 255, 0);
}

#container {
    position: absolute;
    width: 1280px;
    height: 720px;
    overflow: hidden;
}

#container > #background {
    z-index: -1;
}

#ftbCover {
    z-index: 10;
    background-color: black;
    opacity: 0;
}

#imageAdContainer {
    z-index: 11;
    background-color: black;
    transform: translateX(-1280px);
}

#imageAdContainer img {
    position: absolute;
    left: 640px;
    top: 360px;
    max-width: 1280px;
    height: 720px;
    transform: translate(-50%, -50%);
}

#videoPlayer {
    z-index: 11;
}

#fontPreloader {
    position: absolute;
    font-family: 'proxima-nova';
    font-weight: 800;
    color: rgb(0, 255, 0);
    top: 720px;
}

#sponsorsAndTwitter {
    position: absolute;
}

.fullscreen {
    position: absolute;
    width: 1280px;
    height: 720px;
    top: 0;
    left: 0;
}

